--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta name="description" content="Lilla Pulay - Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,9 +15,8 @@
 
 <body>
 
-  <header class="page-header">
-    <a href="index.html"><img src="img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay"
-        class="page-header__item"></a>
+  <header class="page-header lineSlide">
+    <img src="img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay" class="page-header__item logo">
     <nav class="main-navigation page-header__item">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
@@ -86,8 +86,8 @@
           title="GitHub"></a>
       <a href="https://twitter.com/lillapulay" target="_blank"><img src="img/twitter_icon.svg" alt="twitter"
           title="Twitter"></a>
-      <a href="https://www.linkedin.com/in/lilla-pulay/" target="_blank"><img src="img/linkedin_icon.svg"
-          alt="linkedin" title="LinkedIn"></a>
+      <a href="https://www.linkedin.com/in/lilla-pulay/" target="_blank"><img src="img/linkedin_icon.svg" alt="linkedin"
+          title="LinkedIn"></a>
     </div>
   </footer>
   <script src="js/tota11y.min.js"></script>
