--- a/projects/jQueryPokedex.html
+++ b/projects/jQueryPokedex.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta name="description" content="Lilla Pulay - Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,9 +15,8 @@
 
 <body>
 
-  <header class="page-header">
-    <a href="../index.html"><img src="../img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay"
-        class="page-header__item"></a>
+  <header class="page-header lineSlide">
+    <img src="../img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay" class="page-header__item logo">
     <nav class="main-navigation page-header__item">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
