Navbar update, tag fix

--- a/projects/MeetupApp.html
+++ b/projects/MeetupApp.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta name="description" content="Lilla Pulay - Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,9 +15,8 @@
 
 <body>
 
-  <header class="page-header">
-    <a href="../index.html"><img src="../img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay"
-        class="page-header__item"></a>
+  <header class="page-header lineSlide">
+    <img src="../img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay" class="page-header__item logo">
     <nav class="main-navigation page-header__item">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
@@ -42,17 +42,18 @@
       <h2>Description</h2>
       <p>
         MeetUp application created by create-react-app, utilizing the MeetUp API.
-        The aim of this project was to learn different ways of testing and included aspects of both Test-Driven Development and Behavior-Driven Development:
-        <ul>
-          <li>Unit Testing</li>
-          <li>Integration Testing</li>
-          <li>Acceptance Testing</li>
-          <li>End-to-End Testing.</li>
-        </ul>
-        The app was built into a Progressive Web Application (PWA).
-        During the process, it required gaining experience with Continuous Delivery and Object-Oriented Programming.
-        The app has offline availability and includes data visualisation (number of events).<br>
-        This project was part of the CF Full-Stack Web Development course.
+        The aim of this project was to learn different ways of testing and included aspects of both Test-Driven
+        Development and Behavior-Driven Development:
+      <ul>
+        <li>Unit Testing</li>
+        <li>Integration Testing</li>
+        <li>Acceptance Testing</li>
+        <li>End-to-End Testing.</li>
+      </ul>
+      The app was built into a Progressive Web Application (PWA).
+      During the process, it required gaining experience with Continuous Delivery and Object-Oriented Programming.
+      The app has offline availability and includes data visualisation (number of events).<br>
+      This project was part of the CF Full-Stack Web Development course.
       </p>
       <div>
         <p class="testscenarios-button">
