--- a/about.html
+++ b/about.html
@@ -15,23 +15,22 @@
 
 <body>
 
-  <header class="page-header lineSlide">
-    <img src="img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay" class="page-header__item logo">
-    <nav class="main-navigation page-header__item">
-      <ul role="menubar" class="navigation-list">
-        <li role="presentation">
-          <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
-        </li>
-        <li role="presentation">
-          <a href="about.html" role="menuitem" class="navigation-list__item navigation-list__item--active">About</a>
-        </li>
-        <li role="presentation">
-          <a href="projects.html" role="menuitem" class="navigation-list__item">Projects</a>
-        </li>
-        <li role="presentation">
-          <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
-        </li>
+  <header>
+    <nav>
+      <div class="logo">
+        <img src="img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay" class="logo">
+      </div>
+      <ul role="menubar" class="nav-links container pullRight">
+        <li role="presentation" class="active_link"> <a href="index.html" role="menuitem">Home</a></li>
+        <li role="presentation"> <a href="about.html" role="menuitem">About</a></li>
+        <li role="presentation"> <a href="projects.html" role="menuitem">Projects</a></li>
+        <li role="presentation"> <a href="contact.html" role="menuitem">Contact</a></li>
       </ul>
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
     </nav>
   </header>
 
@@ -90,8 +89,9 @@
           title="LinkedIn"></a>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
   <script src="js/tota11y.min.js"></script>
-
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
