--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <link rel="shortcut icon" href="img/favicon.ico">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
-  <script src="js/scripts.js"></script>
   <title> Contact </title>
   <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css"
@@ -16,24 +14,22 @@
 </head>
 
 <body>
-
-  <header class="page-header lineSlide">
-    <img src="img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay" class="page-header__item logo">
-    <nav class="main-navigation page-header__item">
-      <ul role="menubar" class="navigation-list">
-        <li role="presentation">
-          <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
-        </li>
-        <li role="presentation">
-          <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
-        </li>
-        <li role="presentation">
-          <a href="projects.html" role="menuitem" class="navigation-list__item">Projects</a>
-        </li>
-        <li role="presentation">
-          <a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contact</a>
-        </li>
+  <header>
+    <nav>
+      <div class="logo">
+        <img src="img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay" class="logo">
+      </div>
+      <ul role="menubar" class="nav-links container pullRight">
+        <li role="presentation" class="active_link"> <a href="index.html" role="menuitem">Home</a></li>
+        <li role="presentation"> <a href="about.html" role="menuitem">About</a></li>
+        <li role="presentation"> <a href="projects.html" role="menuitem">Projects</a></li>
+        <li role="presentation"> <a href="contact.html" role="menuitem">Contact</a></li>
       </ul>
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
     </nav>
   </header>
 
@@ -93,9 +89,9 @@
           title="LinkedIn"></a>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
   <script src="js/tota11y.min.js"></script>
   <script src="js/scripts.js"></script>
-
 </body>
 
 </html>
