--- a/index.html
+++ b/index.html
@@ -14,24 +14,22 @@
 </head>
 
 <body>
-
-  <header class="page-header lineSlide">
-    <img src="img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay" class="page-header__item logo">
-    <nav class="main-navigation page-header__item">
-      <ul role="menubar" class="navigation-list">
-        <li role="presentation">
-          <a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
-        </li>
-        <li role="presentation">
-          <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
-        </li>
-        <li role="presentation">
-          <a href="projects.html" role="menuitem" class="navigation-list__item">Projects</a>
-        </li>
-        <li role="presentation">
-          <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
-        </li>
+  <header>
+    <nav>
+      <div class="logo">
+        <img src="img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay" class="logo">
+      </div>
+      <ul role="menubar" class="nav-links container pullRight">
+        <li role="presentation" class="active_link"> <a href="index.html" role="menuitem">Home</a></li>
+        <li role="presentation"> <a href="about.html" role="menuitem">About</a></li>
+        <li role="presentation"> <a href="projects.html" role="menuitem">Projects</a></li>
+        <li role="presentation"> <a href="contact.html" role="menuitem">Contact</a></li>
       </ul>
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
     </nav>
   </header>
 
@@ -1002,7 +1000,7 @@
     </svg>
     <h1> Welcome! </h1>
     <p>
-      I am Lilla Pulay, a <span>Web</span> Development student located in the Netherlands.
+      I am Lilla Pulay, a Front-End <span>Web</span> Developer located in the Netherlands.
       This is my portfolio page.
     </p>
     <p>
@@ -1022,8 +1020,9 @@
           title="LinkedIn"></a>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
   <script src="js/tota11y.min.js"></script>
-
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
