--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay" class="logo">
       </div>
       <ul role="menubar" class="nav-links container pullRight">
-        <li role="presentation" class="active_link"> <a href="index.html" role="menuitem">Home</a></li>
+        <li role="presentation"> <a href="index.html" role="menuitem">Home</a></li>
         <li role="presentation"> <a href="about.html" role="menuitem">About</a></li>
         <li role="presentation"> <a href="projects.html" role="menuitem">Projects</a></li>
         <li role="presentation"> <a href="contact.html" role="menuitem">Contact</a></li>
