--- a/projects/myFlix.html
+++ b/projects/myFlix.html
@@ -18,7 +18,7 @@
   <header>
     <nav>
       <img src="../img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay" class="logo">
-      <ul role="menubar" class="nav-links container pullRight">
+      <ul role="menubar" class="nav-links">
         <li role="presentation"> <a href="../index.html" role="menuitem">Home</a></li>
         <li role="presentation"> <a href="../about.html" role="menuitem">About</a></li>
         <li role="presentation"> <a href="../projects.html" role="menuitem">Projects</a></li>
