Intro section done
Nav commented out for now, CSS reorganized a bit

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+  <!-- 
   <header>
     <nav>
       <img src="img/lillapulay.png" alt="Lilla Pulay logo" class="logo">
@@ -36,6 +37,24 @@
       </div>
     </nav>
   </header>
+  -->
+
+  <!-- Introduction -->
+  <section class="intro" id="home">
+    <h1 class="section__title section__title--intro">
+      Hi, I am <strong>Lilla Pulay</strong>
+    </h1>
+    <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+    <img src="img/lilla_pulay_profile.jpg" alt="A picture of Lilla Pulay" class="intro__img">
+  </section>
+
+
+
+
+
+
+
+
 
 
 
