Services section done, text v1
Source of background image: https://unsplash.com/photos/MSN8TFhJ0is

--- a/index.html
+++ b/index.html
@@ -44,11 +44,34 @@
     <h1 class="section__title section__title--intro">
       Hi, I am <strong>Lilla Pulay</strong>
     </h1>
-    <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+    <p class="section__subtitle section__subtitle--intro">Front-end Developer</p>
     <img src="img/lilla_pulay_profile.jpg" alt="A picture of Lilla Pulay" class="intro__img">
   </section>
 
+  <!-- My Services -->
+  <section class="my-services" id="services">
+    <h2 class="section__title section__title--services">What I do</h2>
+    <div class="services">
+      <div class="service">
+        <h3>Front-end Development</h3>
+        <p>I started studying Web Development in the beginning of 2020 and the client-side is definitely where I feel
+          at home the most. During this time I gained experience with HTML, CSS, JavaScript and several
+          libraries/frameworks (e.g. jQuery, React, Angular, Vue).
+          I enjoy working on well-structured, eye-catching interfaces that are practical and easy to use, and make sure
+          the layout is responsive and the application works well in different browsers.</p>
+      </div> <!-- / service -->
 
+      <div class="service">
+        <h3>User Experience (UX)</h3>
+        <p>The importance of prioritizing the user's needs and comfort is unquestionable. After having met with the
+          topic of User Experience at a company event some 2 years ago, I had the opportunity to attend a short course
+          on it and I have been fond of this field ever since. Because UX goes hand in hand with Web Development, I make
+          sure to educate myself on core UX principles and implement them in my development work.</p>
+      </div> <!-- / service -->
+    </div> <!-- / services -->
+
+    <a href="#work" class="btn">My Work</a>
+  </section>
 
 
 
