About me done, text v1

--- a/index.html
+++ b/index.html
@@ -66,11 +66,30 @@
         <p>The importance of prioritizing the user's needs and comfort is unquestionable. After having met with the
           topic of User Experience at a company event some 2 years ago, I had the opportunity to attend a short course
           on it and I have been fond of this field ever since. Because UX goes hand in hand with Web Development, I make
-          sure to educate myself on core UX principles and implement them in my development work.</p>
+          sure to educate myself on core UX principles and implement them in my development projects.</p>
       </div> <!-- / service -->
     </div> <!-- / services -->
 
     <a href="#work" class="btn">My Work</a>
+  </section>
+
+  <!-- About me -->
+  <section class="about-me" id="about">
+    <h2 class="section__title section__title--about">Who I am</h2>
+    <p class="section__subtitle section__subtitle--about">Front-end Dev with an interest in UX</p>
+
+    <div class="about-me__body">
+      <p>As a former Jurist transitioning into the world of Web Development I bring an eye for detail, excellent
+        analytical skills, and the ability to keep up with a fast-paced environment. My aim is to utilize
+        problem-solving and proactivity in any creative process that comes with building web applications. I strive to
+        deliver clear and accurate projects and go the extra mile to really understand the content I am working on.</p>
+      <p>I am looking forward to becoming a part of a team at a company with a growth mindset, where the opportunity to
+        learn is a core principle. I aspire to become a Front-End Developer with a strong knowledge of UX, and hope to
+        combine technical and creative skills in my daily work.</p>
+      <p>Passionate about continuous learning; currently studying Dutch and coding daily to improve my skillset and
+        learn new skills as well.</p>
+    </div>
+    <img src="img/lilla_pulay_profile2.jpg" alt="Lilla Pulay with her dog" class="about-me__img">
   </section>
 
 
