Portfolio section basics done

--- a/index.html
+++ b/index.html
@@ -92,8 +92,43 @@
     <img src="img/lilla_pulay_profile2.jpg" alt="Lilla Pulay with her dog" class="about-me__img">
   </section>
 
+  <!-- My Work -->
+  <section class="my-work" id="work">
+    <h2 class="section__title section__title--work">My Work</h2>
+    <p class="section__subtitle section__subtitle--work">Check out some of my projects</p>
 
+    <div class="portfolio">
+      <!-- Item 1 -->
+      <a href="JavaScript_Pokedex.html" class="portfolio__item">
+        <img src="img/pokejs.PNG" alt="Description" class="portfolio__img">
+      </a>
 
+      <!-- Item 2 -->
+      <a href="jQuery_Pokedex.html" class="portfolio__item">
+        <img src="img/poquery.PNG" alt="Description" class="portfolio__img">
+      </a>
+
+      <!-- Item 3 -->
+      <a href="MeetUp_App.html" class="portfolio__item">
+        <img src="img/meetup.PNG" alt="Description" class="portfolio__img">
+      </a>
+
+      <!-- Item 4 -->
+      <a href="Hello_World.html" class="portfolio__item">
+        <img src="img/chatapp.png" alt="Description" class="portfolio__img">
+      </a>
+
+      <!-- Item 5 -->
+      <a href="MyFlix.html" class="portfolio__item">
+        <img src="img/myflix.PNG" alt="Description" class="portfolio__img">
+      </a>
+
+      <!-- Item 6 -->
+      <a href="Old_Portfolio.html" class="portfolio__item">
+        <img src="img/oldportfolio.png" alt="Description" class="portfolio__img">
+      </a>
+    </div>
+  </section>
 
 
 
