Small screen adjustments

--- a/index.html
+++ b/index.html
@@ -86,8 +86,6 @@
       <p>I am looking forward to becoming a part of a team at a company with a growth mindset, where the opportunity to
         learn is a core principle. I aspire to become a Front-End Developer with a strong knowledge of UX, and hope to
         combine technical and creative skills in my daily work.</p>
-      <p>Passionate about continuous learning; currently studying Dutch and coding daily to improve my skillset and
-        learn new skills as well.</p>
     </div>
     <img src="img/lilla_pulay_profile2.jpg" alt="Lilla Pulay with her dog" class="about-me__img">
   </section>
@@ -130,10 +128,11 @@
     </div>
   </section>
 
-
-
-
-
+  <!-- 
+  Placeholder 
+  for 
+  contact 
+  form-->
 
   <!-- Footer -->
   <footer class="footer">
