Navbar set up and working

--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
 </head>
 
 <body>
-  <!-- 
   <header>
     <nav>
       <img src="img/lillapulay.png" alt="Lilla Pulay logo" class="logo">
       <ul role="menubar" class="nav-links">
         <li role="presentation"><a href="#home" role="menuitem">Home</a></li>
-        <li role="presentation"><a href="#services" role="menuitem">About</a></li>
-        <li role="presentation"><a href="#about" role="menuitem">Projects</a></li>
-        <li role="presentation"><a href="#work" role="menuitem">Contact</a></li>
+        <li role="presentation"><a href="#services" role="menuitem">Services</a></li>
+        <li role="presentation"><a href="#about" role="menuitem">About</a></li>
+        <li role="presentation"><a href="#work" role="menuitem">Projects</a></li>
       </ul>
       <div class="burger">
         <div class="line1"></div>
@@ -37,7 +36,6 @@
       </div>
     </nav>
   </header>
-  -->
 
   <!-- Introduction -->
   <section class="intro" id="home">
@@ -70,7 +68,7 @@
       </div> <!-- / service -->
     </div> <!-- / services -->
 
-    <a href="#work" class="btn">My Work</a>
+    <a href="#work" class="btn">See My Work</a>
   </section>
 
   <!-- About me -->
