--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <img src="img/lillapulay.png" alt="Lilla Pulay logo" class="logo">
       <ul role="menubar" class="nav-links">
         <li role="presentation"><a href="#home" role="menuitem">Home</a></li>
-        <li role="presentation"><a href="#services" role="menuitem">Services</a></li>
-        <li role="presentation"><a href="#about" role="menuitem">About</a></li>
-        <li role="presentation"><a href="#work" role="menuitem">Projects</a></li>
+        <li role="presentation"><a href="#services" role="menuitem">My Services</a></li>
+        <li role="presentation"><a href="#about" role="menuitem">Who I Am</a></li>
+        <li role="presentation"><a href="#work" role="menuitem">My Projects</a></li>
       </ul>
       <div class="burger">
         <div class="line1"></div>
@@ -137,27 +137,30 @@
     <a href="mailto:pulaylilla@gmail.com" class="footer__link">pulaylilla@gmail.com</a>
     <ul class="social-list">
       <li class="social-list__item">
-        <a class="social-list__link" target="_blank" href="https://github.com/lillapulay">
+        <a class="social-list__link" target="_blank" aria-label="GitHub profile" href="https://github.com/lillapulay">
           <i class="fab fa-github"></i>
         </a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link" target="_blank" href="https://linkedin.com/in/lillapulay">
+        <a class="social-list__link" target="_blank" aria-label="LinkedIn profile"
+          href="https://linkedin.com/in/lillapulay">
           <i class="fab fa-linkedin"></i>
         </a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link" target="_blank" href="https://twitter.com/lillapulay">
+        <a class="social-list__link" target="_blank" aria-label="Twitter profile" href="https://twitter.com/lillapulay">
           <i class="fab fa-twitter"></i></a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link" target="_blank" href="https://stackoverflow.com/users/13673487/lillapulay">
+        <a class="social-list__link" target="_blank" aria-label="StackOverflow profile"
+          href="https://stackoverflow.com/users/13673487/lillapulay">
           <i class="fab fa-stack-overflow"></i></a>
       </li>
     </ul>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+  <!-- Remove from prod! -->
   <script src="js/tota11y.min.js"></script>
   <script src="js/scripts.js"></script>
 </body>
