Highlighted demo + code location

--- a/projects/jQuery_Pokedex.html
+++ b/projects/jQuery_Pokedex.html
@@ -50,9 +50,10 @@
       This project was part of the CF Full-Stack Web Development course.</p>
     <img src="../img/poquery2.PNG" alt="" class="project__img">
     <p>This project was my first time using JavaScript libraries. The layout and functionality is almost exactly the
-      same as that of the original, vanilla JavaScript version, but it uses different tools as its backbone. You can see
-      the hosted website <a href="https://lillapulay.github.io/jquery-pokedex/" target="_blank">here</a>.
-      You can check out the code <a href="https://github.com/lillapulay/jquery-pokedex" target="_blank">here</a>.</p>
+      same as that of the original, vanilla JavaScript version, but it uses different tools as its backbone. </p>
+    <p><strong>Visit the <a href="https://lillapulay.github.io/jquery-pokedex/" target="_blank"> hosted website</a>,
+        or check out the <a href="https://github.com/lillapulay/jquery-pokedex" target="_blank">GitHub
+          repo</a>.</strong></p>
     <p>Besides fulfilling the task requirements, I also gave the styling a boost by creating consistent theme colors and
       shapes, and the project got showcased amongst student submissions in the corresponding lecture.</p>
   </div>
