--- a/projects/JavaScript_Pokedex.html
+++ b/projects/JavaScript_Pokedex.html
@@ -49,9 +49,11 @@
       the CF Full-Stack Web Development course.</p>
     <img src="../img/pokejs2.PNG" alt="" class="project__img">
     <p>The goal of this project was to learn basic JavaScript (variables, functions, arrays, DOM interaction, AJAX,
-      etc.) in the beginning of the course.
-      Check out the <a href="https://lillapulay.github.io/pokedex-javascript/" target="_blank">hosted website</a> and
-      the<a href="https://github.com/lillapulay/pokedex-javascript" target="_blank">GitHub repo</a>.
+      etc.) in the beginning of the course.</p>
+    <p><strong>Visit the <a href="https://lillapulay.github.io/pokedex-javascript/" target="_blank">hosted website</a>,
+        or
+        check out the<a href="https://github.com/lillapulay/pokedex-javascript" target="_blank">GitHub
+          repo</a>.</strong>
     </p>
     <p>After this exercise I created an <a href="jQuery_Pokedex.html">updated version </a>using Bootstrap and jQuery.
     </p>
