Adjusted links to new folder structure

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li role="presentation"><a href="#home" role="menuitem">Home</a></li>
         <li role="presentation"><a href="#services" role="menuitem">My Services</a></li>
         <li role="presentation"><a href="#about" role="menuitem">Who I Am</a></li>
-        <li role="presentation"><a href="#work" role="menuitem">My Projects</a></li>
+        <li role="presentation"><a href="#work" role="menuitem">My Work</a></li>
       </ul>
       <div class="burger">
         <div class="line1"></div>
@@ -96,32 +96,32 @@
 
     <div class="portfolio">
       <!-- Item 1 -->
-      <a href="JavaScript_Pokedex.html" class="portfolio__item">
+      <a href="projects/JavaScript_Pokedex.html" class="portfolio__item">
         <img src="img/pokejs.PNG" alt="Description" class="portfolio__img">
       </a>
 
       <!-- Item 2 -->
-      <a href="jQuery_Pokedex.html" class="portfolio__item">
+      <a href="projects/jQuery_Pokedex.html" class="portfolio__item">
         <img src="img/poquery.PNG" alt="Description" class="portfolio__img">
       </a>
 
       <!-- Item 3 -->
-      <a href="MeetUp_App.html" class="portfolio__item">
+      <a href="projects/MeetUp_App.html" class="portfolio__item">
         <img src="img/meetup.PNG" alt="Description" class="portfolio__img">
       </a>
 
       <!-- Item 4 -->
-      <a href="Hello_World.html" class="portfolio__item">
+      <a href="projects/Hello_World.html" class="portfolio__item">
         <img src="img/chatapp.png" alt="Description" class="portfolio__img">
       </a>
 
       <!-- Item 5 -->
-      <a href="MyFlix.html" class="portfolio__item">
+      <a href="projects/MyFlix.html" class="portfolio__item">
         <img src="img/myflix.PNG" alt="Description" class="portfolio__img">
       </a>
 
       <!-- Item 6 -->
-      <a href="Old_Portfolio.html" class="portfolio__item">
+      <a href="projects/Old_Portfolio.html" class="portfolio__item">
         <img src="img/oldportfolio.png" alt="Description" class="portfolio__img">
       </a>
     </div>
