Added missing accessibility features

--- a/projects/JavaScript_Pokedex.html
+++ b/projects/JavaScript_Pokedex.html
@@ -47,7 +47,7 @@
       Development course. This simple app loads data from an external API, displays each object on a separate button and
       shows further details in a modal. This project was part of
       the CF Full-Stack Web Development course.</p>
-    <img src="../img/pokejs2.PNG" alt="" class="project__img">
+    <img src="../img/pokejs2.PNG" alt="A screenshot of the project" class="project__img">
     <p>The goal of this project was to learn basic JavaScript (variables, functions, arrays, DOM interaction, AJAX,
       etc.) in the beginning of the course.</p>
     <p><strong>Visit the <a href="https://lillapulay.github.io/pokedex-javascript/" target="_blank">hosted website</a>,
