--- a/projects/Old_Portfolio.html
+++ b/projects/Old_Portfolio.html
@@ -46,7 +46,7 @@
     <p>I started building this website when I began to study Web Development. As it was the very first assignment of the
       cource, the website only used HTML and CSS. The goal of this project was to understand how websites work, learn
       and practice version control and discover basic hosting options. </p>
-    <img src="../img/oldportfolio.PNG" alt="" class="project__img">
+    <img src="../img/oldportfolio.PNG" alt="A screenshot of the project" class="project__img">
     <p>The website you are currently browsing is the successor of this project and the continuation of the same GitHub
       repository.
       You can check out the <a href="https://github.com/lillapulay/portfolio-website" target="_blank">GitHub
