--- a/projects/jQuery_Pokedex.html
+++ b/projects/jQuery_Pokedex.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../img/favicon.ico">
-  <title>JavaScript Pokedex</title>
+  <title>jQuery Pokedex</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <!-- For social icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
@@ -48,7 +48,7 @@
       The app loads data from an external API, displays each object on a separate button and shows further details in a
       modal.
       This project was part of the CF Full-Stack Web Development course.</p>
-    <img src="../img/poquery2.PNG" alt="" class="project__img">
+    <img src="../img/poquery2.PNG" alt="A screenshot of the project" class="project__img">
     <p>This project was my first time using JavaScript libraries. The layout and functionality is almost exactly the
       same as that of the original, vanilla JavaScript version, but it uses different tools as its backbone. </p>
     <p><strong>Visit the <a href="https://lillapulay.github.io/jquery-pokedex/" target="_blank"> hosted website</a>,
@@ -63,21 +63,23 @@
     <a href="mailto:pulaylilla@gmail.com" class="footer__link">pulaylilla@gmail.com</a>
     <ul class="social-list">
       <li class="social-list__item">
-        <a class="social-list__link" target="_blank" href="https://github.com/lillapulay">
+        <a class="social-list__link" target="_blank" aria-label="GitHub profile" href="https://github.com/lillapulay">
           <i class="fab fa-github"></i>
         </a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link" target="_blank" href="https://linkedin.com/in/lillapulay">
+        <a class="social-list__link" target="_blank" aria-label="LinkedIn profile"
+          href="https://linkedin.com/in/lillapulay">
           <i class="fab fa-linkedin"></i>
         </a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link" target="_blank" href="https://twitter.com/lillapulay">
+        <a class="social-list__link" target="_blank" aria-label="Twitter profile" href="https://twitter.com/lillapulay">
           <i class="fab fa-twitter"></i></a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link" target="_blank" href="https://stackoverflow.com/users/13673487/lillapulay">
+        <a class="social-list__link" target="_blank" aria-label="StackOverflow profile"
+          href="https://stackoverflow.com/users/13673487/lillapulay">
           <i class="fab fa-stack-overflow"></i></a>
       </li>
     </ul>
