--- a/projects/Hello_World.html
+++ b/projects/Hello_World.html
@@ -45,7 +45,7 @@
   <div class="portfolio-item-individual">
     <p>Mobile application written in React Native, utilizing React Navigation and React Native Gifted Chat, amongst
       others. This project was part of the CF Full-Stack Web Development course.</p>
-    <img src="../img/chatapp.PNG" alt="" class="project__img">
+    <img src="../img/chatapp.PNG" alt="A screenshot of the project" class="project__img">
     <p><strong>Check out the <a href="https://github.com/lillapulay/hello-world" target="_blank">GitHub
           repo</a>.</strong>
     </p>
@@ -108,21 +108,23 @@
     <a href="mailto:pulaylilla@gmail.com" class="footer__link">pulaylilla@gmail.com</a>
     <ul class="social-list">
       <li class="social-list__item">
-        <a class="social-list__link" target="_blank" href="https://github.com/lillapulay">
+        <a class="social-list__link" target="_blank" aria-label="GitHub profile" href="https://github.com/lillapulay">
           <i class="fab fa-github"></i>
         </a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link" target="_blank" href="https://linkedin.com/in/lillapulay">
+        <a class="social-list__link" target="_blank" aria-label="LinkedIn profile"
+          href="https://linkedin.com/in/lillapulay">
           <i class="fab fa-linkedin"></i>
         </a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link" target="_blank" href="https://twitter.com/lillapulay">
+        <a class="social-list__link" target="_blank" aria-label="Twitter profile" href="https://twitter.com/lillapulay">
           <i class="fab fa-twitter"></i></a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link" target="_blank" href="https://stackoverflow.com/users/13673487/lillapulay">
+        <a class="social-list__link" target="_blank" aria-label="StackOverflow profile"
+          href="https://stackoverflow.com/users/13673487/lillapulay">
           <i class="fab fa-stack-overflow"></i></a>
       </li>
     </ul>
