--- a/projects/myFlix.html
+++ b/projects/myFlix.html
@@ -49,7 +49,7 @@
       React, and Node.js) stack.</p>
     <p>The web application provides users with access to information about different movies, directors, and genres.
       Users can sign up, log in, update their account information and manage a list of their favorite movies.</p>
-    <img src="../img/myFlix2.PNG" alt="" class="project__img">
+    <img src="../img/myFlix2.PNG" alt="A screenshot of the project" class="project__img">
     <p><strong>Visit the <a href="https://mymovieapi2020.herokuapp.com/client/" target="_blank"> hosted website</a>,
         or check out the <a href="https://github.com/lillapulay/movie_API" target="_blank">GitHub
           repo</a>.
@@ -57,8 +57,6 @@
     <p>Read the <a href="https://mymovieapi2020.herokuapp.com/documentation.html" target="_blank">
         endpoint documentation</a>.</p>
   </div>
-
-
 
   <div class="portfolio-item-individual extra-info">
     <p class="section__subtitle section__subtitle--intro">Summary</p>
@@ -147,21 +145,23 @@
     <a href="mailto:pulaylilla@gmail.com" class="footer__link">pulaylilla@gmail.com</a>
     <ul class="social-list">
       <li class="social-list__item">
-        <a class="social-list__link" target="_blank" href="https://github.com/lillapulay">
+        <a class="social-list__link" target="_blank" aria-label="GitHub profile" href="https://github.com/lillapulay">
           <i class="fab fa-github"></i>
         </a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link" target="_blank" href="https://linkedin.com/in/lillapulay">
+        <a class="social-list__link" target="_blank" aria-label="LinkedIn profile"
+          href="https://linkedin.com/in/lillapulay">
           <i class="fab fa-linkedin"></i>
         </a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link" target="_blank" href="https://twitter.com/lillapulay">
+        <a class="social-list__link" target="_blank" aria-label="Twitter profile" href="https://twitter.com/lillapulay">
           <i class="fab fa-twitter"></i></a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link" target="_blank" href="https://stackoverflow.com/users/13673487/lillapulay">
+        <a class="social-list__link" target="_blank" aria-label="StackOverflow profile"
+          href="https://stackoverflow.com/users/13673487/lillapulay">
           <i class="fab fa-stack-overflow"></i></a>
       </li>
     </ul>
