Link to test scenarios added

--- a/projects/MeetUp_App.html
+++ b/projects/MeetUp_App.html
@@ -79,6 +79,8 @@
       <li>Puppeteer.</li>
     </ul>
     </p>
+    <p>Check out the <b><a href="../files/Test_Scenarios.pdf" target="_blank">
+          test scenarios</a></b>.</p>
   </div>
 
   <div class="portfolio-item-individual extra-info">
