--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
       <!-- Item 6 -->
       <a href="projects/Old_Portfolio.html" class="portfolio__item">
-        <img src="img/oldportfolio.png" alt="Description" class="portfolio__img">
+        <img src="img/oldportfolio.PNG" alt="Description" class="portfolio__img">
       </a>
     </div>
   </section>
