Updated alt text

--- a/index.html
+++ b/index.html
@@ -97,32 +97,32 @@
     <div class="portfolio">
       <!-- Item 1 -->
       <a href="projects/JavaScript_Pokedex.html" class="portfolio__item">
-        <img src="img/pokejs.PNG" alt="Description" class="portfolio__img">
+        <img src="img/pokejs.PNG" alt="JavaScript Pokedex" class="portfolio__img">
       </a>
 
       <!-- Item 2 -->
       <a href="projects/jQuery_Pokedex.html" class="portfolio__item">
-        <img src="img/poquery.PNG" alt="Description" class="portfolio__img">
+        <img src="img/poquery.PNG" alt="jQuery Pokedex" class="portfolio__img">
       </a>
 
       <!-- Item 3 -->
       <a href="projects/MeetUp_App.html" class="portfolio__item">
-        <img src="img/meetup.PNG" alt="Description" class="portfolio__img">
+        <img src="img/meetup.PNG" alt="MeetUp App" class="portfolio__img">
       </a>
 
       <!-- Item 4 -->
       <a href="projects/Hello_World.html" class="portfolio__item">
-        <img src="img/chatapp.png" alt="Description" class="portfolio__img">
+        <img src="img/chatapp.png" alt="Hello World!" class="portfolio__img">
       </a>
 
       <!-- Item 5 -->
       <a href="projects/MyFlix.html" class="portfolio__item">
-        <img src="img/myflix.PNG" alt="Description" class="portfolio__img">
+        <img src="img/myflix.PNG" alt="MyFlix" class="portfolio__img">
       </a>
 
       <!-- Item 6 -->
       <a href="projects/Old_Portfolio.html" class="portfolio__item">
-        <img src="img/oldportfolio.PNG" alt="Description" class="portfolio__img">
+        <img src="img/oldportfolio.PNG" alt="Old Portfolio" class="portfolio__img">
       </a>
     </div>
   </section>
