--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </a>
 
       <!-- Item 5 -->
-      <a href="projects/MyFlix.html" class="portfolio__item">
+      <a href="projects/myFlix.html" class="portfolio__item">
         <img src="img/myflix.PNG" alt="MyFlix" class="portfolio__img">
       </a>
 
