--- a/projects/Hello_World.html
+++ b/projects/Hello_World.html
@@ -39,13 +39,13 @@
       Hello, <strong>World!</strong>
     </h1>
     <p class="section__subtitle section__subtitle--intro project__subtitle">React Native chat app</p>
-    <img src="../img/chatapp.PNG" alt="A screenshot of the project" class="intro__img">
+    <img src="../img/chatapp.png" alt="A screenshot of the project" class="intro__img">
   </section>
 
   <div class="portfolio-item-individual">
     <p>Mobile application written in React Native, utilizing React Navigation and React Native Gifted Chat, amongst
       others. This project was part of the CF Full-Stack Web Development course.</p>
-    <img src="../img/chatapp.PNG" alt="A screenshot of the project" class="project__img">
+    <img src="../img/chatapp.png" alt="A screenshot of the project" class="project__img">
     <p><strong>Check out the <a href="https://github.com/lillapulay/hello-world" target="_blank">GitHub
           repo</a>.</strong>
     </p>
