--- a/projects/myFlix.html
+++ b/projects/myFlix.html
@@ -39,7 +39,7 @@
       Movie <strong>API</strong>
     </h1>
     <p class="section__subtitle section__subtitle--intro project__subtitle">MERN-stack app</p>
-    <img src="../img/myFlix.PNG" alt="A screenshot of the project" class="intro__img">
+    <img src="../img/mylix.PNG" alt="A screenshot of the project" class="intro__img">
   </section>
 
   <div class="portfolio-item-individual">
@@ -49,7 +49,7 @@
       React, and Node.js) stack.</p>
     <p>The web application provides users with access to information about different movies, directors, and genres.
       Users can sign up, log in, update their account information and manage a list of their favorite movies.</p>
-    <img src="../img/myFlix2.PNG" alt="A screenshot of the project" class="project__img">
+    <img src="../img/mylix2.PNG" alt="A screenshot of the project" class="project__img">
     <p><strong>Visit the <a href="https://mymovieapi2020.herokuapp.com/client/" target="_blank"> hosted website</a>,
         or check out the <a href="https://github.com/lillapulay/movie_API" target="_blank">GitHub
           repo</a>.
